Added frame support

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Free Compliments</title>
+    <meta property="fc:frame" content="vNext" />
+    <meta
+      property="fc:frame:image"
+      content="https://freecompliment.com/api/og"
+    />
+    <meta property="fc:frame:button:1" content="Get another compliment" />
+    <meta
+      property="fc:frame:post_url"
+      content="https://freecompliment.com/api/frame"
+    />
     <style>
       :root {
         --dark-blue: #1a1f3c;
