--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Free Compliments</title>
+    <meta property="og:image" content="https://freecompliment.com/api/og" />
     <meta property="fc:frame" content="vNext" />
     <meta
       property="fc:frame:image"
@@ -14,6 +15,8 @@
       property="fc:frame:post_url"
       content="https://freecompliment.com/api/frame"
     />
+    <meta property="fc:frame:aspect_ratio" content="1.91:1" />
+    <meta property="fc:frame:image:aspect_ratio" content="1.91:1" />
     <style>
       :root {
         --dark-blue: #1a1f3c;
