--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         "action": {
           "type": "launch_frame",
           "name": "Free Compliment",
-          "url": "https://freecompliment.com/api/frame",
+          "url": "https://freecompliment.com",
           "splashImageUrl": "https://freecompliment.com/api/og",
           "splashBackgroundColor": "#1a1f3c"
         }
