test: verify pre-commit hooks are working

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,9 @@
       <div id="compliment">Loading your compliment...</div>
       <div class="button-container">
         <button onclick="getCompliment()">Get another compliment</button>
-        <button onclick="mintCompliment()">Mint this compliment</button>
+        <button onclick="mintCompliment()" style="display: none">
+          Mint this compliment
+        </button>
       </div>
       <div class="links-container">
         <a href="/backhanded">Try a backhanded one</a>
